Update TreeFactory to use SequencedMap and SequencedCollection